# Collective_Robotics

./: .gitignore  .gitmodules  README.md  task1.ipynb
Assignments/: task2_2.py
Assignments/CRA1/: README.md  subtask1_response_scaling.py  subtask2_sync_swarm.py  subtask3_connectivity.py  task_2_1.py
Assignments/CRA1/nb/: task1.ipynb
Assignments/CRA1/src/: environment.yml  task2_1.py  task2_2.py
Assignments/CRA2/: readme.md  vacuum_cleaning.argos
Assignments/CRA2/Argos/task1_1/footbot_diffusion/: CMakeLists.txt
Assignments/CRA2/Argos/task1_2/footbot_wall_follower/: footbot_wall_following.cpp
Assignments/CRA2/Argos/task1_3/: FootBotRandomStepCleaner.argos  trajectory.argos  vacuum_cleaning.argos
Assignments/CRA2/Argos/task1_3/footbot_random_cleaner/: CMakeLists.txt  footbot_random_step_cleaner.cpp
Assignments/CRA2/Argos/task1_3/footbot_random_step_cleaner/: footbot_random_step_cleaner.cpp  footbot_random_step_cleaner.h
Assignments/CRA2/Argos/task1_3/trajectory_loop_functions/: footbot_diffusion.cpp
Assignments/CRA2/Argos/task1_3/vacuum_loop_functions/: CMakeLists.txt
Assignments/CRA2/Argos/task2_1/: diffusion_10.argos
Assignments/CRA2/Argos/task2_2/footbot_diffusion/: footbot_diffusion.cpp
Assignments/CRA2/task1_1/: footbot_diffusion.h  task1_1.argos
Assignments/CRA2/task1_2/: CMakeLists.txt  footbot_wall_following.cpp  wall_following.argos
Assignments/CRA2/task1_2/footbot_wall_follower/: footbot_wall_following.h
Assignments/CRA2/task1_3/: footbot_diffusion.cpp  task1_3.argos
Assignments/CRA2/task1_3/trajectory_loop_functions/: CMakeLists.txt
Assignments/CRA2/task2_1/: task2_1.argos
Assignments/CRA2/task2_2/: diffusion_10.argos  footbot_diffusion.cpp  footbot_diffusion.h
Assignments/CRA2/task2_2/footbot_diffusion/: footbot_diffusion.cpp  footbot_diffusion.h
Assignments/CRA2/vacuum_loop_functions/: CMakeLists.txt  vacuum_loop_functions.cpp  vacuum_loop_functions.h
Assignments/CRA3/: README.md  Task1.ipynb  task2.py
Assignments/CRA3/nb/: CRA3.ipynb
Assignments/CRA3/src/: task2_new.py
References/: environment.yml
